# ai4pdes-difusao-neutrons-1d

./: .gitignore  README.md  difusao_neutrons_neuralphysics_1d_comparativo_v4_0.py  difusao_neutrons_neuralphysics_1d_thomas_couto_v4_1.py  gui_app.py  main.py  pyproject.toml  relatorios.py  requirements.txt  solver_difusao.py
outputs/: relatorio_heterogeneo_comparativo.md  relatorio_homogeneo_comparativo.md  relatorio_sensibilidade_heterogeneo.md  relatorio_sensibilidade_homogeneo.md  resultados_comparacao.csv  resultados_sensibilidade.csv
scripts/: generate_enmc_outputs.py
src/neutron_ai4pdes/: __init__.py  app.py  gui.py  method.py  models.py  references.py  solver.py
tests/: test_solver.py
tools/: build_single_v4.py
